wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_defer_1.rs
use wallet_common::ErrorCategory;

#[derive(ErrorCategory)]
enum Error {
    #[category(defer)]
    MyError(#[defer] std::io::Error),
}

fn main() {}
